--- a/package.json
+++ b/package.json
@@ -1,28 +1,15 @@
 {
-  "name": "PixelPolyBot",
-  "version": "0.0.1",
-  "description": "A bot for TPPC",
-  "main": "node index.js",
+  "name": "UrAvgBot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": { "node": "8.4.0" },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nayabw/pixelpolybot"
-  },
-  "author": "The Pixel Polygon Center Staff",
-  "license": "GNU",
-  "bugs": {
-    "url": "https://github.com/nayabw/pixelpolybot/issues"
-  },
-  "homepage": "https://github.com/nayabw/pixelpolybot/blob/master/README.md",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.2.1",
-    "enmap": "^0.3.2",
-    "moment": "^2.18.1",
-    "moment-duration-format": "^1.3.0",
-    "express": "^4.15.5"
+    "discord.js": "^11.3.2"
   }
 }
