--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-  "name": "UrAvgBot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "bot.js",
+  "name": "PixelPolyBot",
+  "version": "0.0.1",
+  "description": "A bot for TPPC",
+  "main": "node index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bot.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "engines": { "node": "8.4.0" },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nayabw/pixelpolybot"
+  },
+  "author": "The Pixel Polygon Center Staff",
+  "license": "GNU",
+  "bugs": {
+    "url": "https://github.com/nayabw/pixelpolybot/issues"
+  },
+  "homepage": "https://github.com/nayabw/pixelpolybot/blob/master/README.md",
   "dependencies": {
-    "discord.js": "^11.3.2"
+    "discord.js": "^11.2.1",
+    "enmap": "^0.3.2",
+    "moment": "^2.18.1",
+    "moment-duration-format": "^1.3.0",
+    "express": "^4.15.5"
   }
 }
+
